@@ -1,4 +1,10 @@
 2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amrmtape.pl: Add --external-copy argument.
+	* man/xml-source/amrmtape.8.xml: Document --external-copy argument.
+	* perl/Amanda/Label.pm: Implement external_copy argument.
+	* perl/Amanda/Rest/Storages/Labels.pm: Ditto.
+
+2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/diskflat-device.c (erase): Add method.
 	* perl/Amanda/Changer/diskflat.pm: New chg-diskflat changer.
 	* perl/Amanda/Changer.pm (label_to_slot): New method.
